New Crowdin updates (#12956)
* New translations: site.xml (Polish)

* New translations: faq.xml (Polish)

* New translations: site.xml (Polish)

* New translations: challenge.xml (Romanian)

* New translations: challenge.xml (Indonesian)

* New translations: challenge.xml (Breton)

* New translations: challenge.xml (French)

* New translations: challenge.xml (Spanish)

* New translations: challenge.xml (Afrikaans)

* New translations: challenge.xml (Arabic)

* New translations: challenge.xml (Belarusian)

* New translations: challenge.xml (Bulgarian)

* New translations: challenge.xml (Catalan)

* New translations: challenge.xml (Czech)

* New translations: challenge.xml (Danish)

* New translations: challenge.xml (German)

* New translations: challenge.xml (Greek)

* New translations: challenge.xml (Basque)

* New translations: challenge.xml (Finnish)

* New translations: challenge.xml (Irish)

* New translations: challenge.xml (Hebrew)

* New translations: challenge.xml (Hungarian)

* New translations: challenge.xml (Armenian)

* New translations: challenge.xml (Italian)

* New translations: challenge.xml (Japanese)

* New translations: challenge.xml (Georgian)

* New translations: challenge.xml (Korean)

* New translations: challenge.xml (Lithuanian)

* New translations: challenge.xml (Macedonian)

* New translations: challenge.xml (Dutch)

* New translations: challenge.xml (Polish)

* New translations: challenge.xml (Portuguese)

* New translations: challenge.xml (Russian)

* New translations: challenge.xml (Slovak)

* New translations: challenge.xml (Slovenian)

* New translations: challenge.xml (Albanian)

* New translations: challenge.xml (Serbian (Cyrillic))

* New translations: challenge.xml (Swedish)

* New translations: challenge.xml (Turkish)

* New translations: challenge.xml (Ukrainian)

* New translations: challenge.xml (Chinese Simplified)

* New translations: challenge

--- a/translation/dest/challenge/sk-SK.xml
+++ b/translation/dest/challenge/sk-SK.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <string name="challenges">Výzvy</string>
+  <string name="challengesX">Výzvy: %1$s</string>
   <string name="challengeToPlay">Vyzvať na partiu</string>
   <string name="challengeDeclined">Výzva odmietnutá</string>
   <string name="challengeAccepted">Výzva prijatá!</string>
