--- a/translation/dest/preferences/es-ES.xml
+++ b/translation/dest/preferences/es-ES.xml
@@ -46,5 +46,5 @@
 	<string name="kitaoKawasakiNotation">Notación Kitao-Kawasaki</string>
 	<string name="kifNotation">Notación kifu</string>
 	<string name="yourPreferencesHaveBeenSaved">Tus preferencias se han guardado.</string>
-	<string name="smallMoveList">Smaller move list for games</string>
+	<string name="smallMoves">Small moves</string>
 </resources>
