--- a/translation/dest/preferences/hi-IN.xml
+++ b/translation/dest/preferences/hi-IN.xml
@@ -2,7 +2,7 @@
 <resources>
 	<string name="preferences">प्राथमिकताएं</string>
 	<string name="gameDisplay">खेल का प्रदर्शन</string>
-	<string name="boardLayout">Board layout</string>
+	<string name="boardLayout">Game board layout</string>
 	<string name="clearHands">Hide ghosts of pieces in hand</string>
 	<string name="handsBackground">Show background behind pieces in hand</string>
 	<string name="pieceAnimation">मोहरों का एनीमेशन</string>
@@ -46,5 +46,5 @@
 	<string name="kitaoKawasakiNotation">किताओ-कावासाकी (Kitao-Kawasaki)</string>
 	<string name="kifNotation">Kif notation</string>
 	<string name="yourPreferencesHaveBeenSaved">आपकी प्राथमिकताएं सेव कर ली गई हैं</string>
-	<string name="smallMoveList">Smaller move list for games</string>
+	<string name="smallMoves">Small moves</string>
 </resources>
