--- a/translation/dest/preferences/ko-KR.xml
+++ b/translation/dest/preferences/ko-KR.xml
@@ -2,7 +2,7 @@
 <resources>
 	<string name="preferences">설정</string>
 	<string name="gameDisplay">게임 화면</string>
-	<string name="boardLayout">Board layout</string>
+	<string name="boardLayout">Game board layout</string>
 	<string name="clearHands">Hide ghosts of pieces in hand</string>
 	<string name="handsBackground">Show background behind pieces in hand</string>
 	<string name="pieceAnimation">기물 움직임 애니메이션</string>
@@ -46,5 +46,5 @@
 	<string name="kitaoKawasakiNotation">Kitao-Kawasaki notation</string>
 	<string name="kifNotation">Kif notation</string>
 	<string name="yourPreferencesHaveBeenSaved">설정이 저장되었습니다.</string>
-	<string name="smallMoveList">Smaller move list for games</string>
+	<string name="smallMoves">Small moves</string>
 </resources>
