--- a/translation/dest/preferences/pt-PT.xml
+++ b/translation/dest/preferences/pt-PT.xml
@@ -2,7 +2,7 @@
 <resources>
 	<string name="preferences">Preferências</string>
 	<string name="gameDisplay">Exibição do jogo</string>
-	<string name="boardLayout">Board layout</string>
+	<string name="boardLayout">Game board layout</string>
 	<string name="clearHands">Hide ghosts of pieces in hand</string>
 	<string name="handsBackground">Show background behind pieces in hand</string>
 	<string name="pieceAnimation">Animação das peças</string>
@@ -46,5 +46,5 @@
 	<string name="kitaoKawasakiNotation">Kitao-Kawasaki notation</string>
 	<string name="kifNotation">Kif notation</string>
 	<string name="yourPreferencesHaveBeenSaved">As suas preferências foram guardadas.</string>
-	<string name="smallMoveList">Smaller move list for games</string>
+	<string name="smallMoves">Small moves</string>
 </resources>
