--- a/translation/dest/preferences/ru-RU.xml
+++ b/translation/dest/preferences/ru-RU.xml
@@ -46,5 +46,5 @@
 	<string name="kitaoKawasakiNotation">Китайская</string>
 	<string name="kifNotation">Нотация кифу</string>
 	<string name="yourPreferencesHaveBeenSaved">Ваши настройки сохранены.</string>
-	<string name="smallMoveList">Smaller move list for games</string>
+	<string name="smallMoves">Small moves</string>
 </resources>
