--- a/translation/dest/preferences/sv-SE.xml
+++ b/translation/dest/preferences/sv-SE.xml
@@ -2,7 +2,7 @@
 <resources>
 	<string name="preferences">Inställningar</string>
 	<string name="gameDisplay">Spelutseende</string>
-	<string name="boardLayout">Board layout</string>
+	<string name="boardLayout">Game board layout</string>
 	<string name="clearHands">Hide ghosts of pieces in hand</string>
 	<string name="handsBackground">Show background behind pieces in hand</string>
 	<string name="pieceAnimation">Pjäsanimation</string>
@@ -46,5 +46,5 @@
 	<string name="kitaoKawasakiNotation">Kitao-Kawasaki notation</string>
 	<string name="kifNotation">Kif notation</string>
 	<string name="yourPreferencesHaveBeenSaved">Dina inställningar har sparats.</string>
-	<string name="smallMoveList">Smaller move list for games</string>
+	<string name="smallMoves">Small moves</string>
 </resources>
