--- a/translation/dest/preferences/vi-VN.xml
+++ b/translation/dest/preferences/vi-VN.xml
@@ -46,5 +46,5 @@
 	<string name="kitaoKawasakiNotation">Kí hiệu Kitao-Kawasaki</string>
 	<string name="kifNotation">Kí hiệu trẻ em</string>
 	<string name="yourPreferencesHaveBeenSaved">Các tùy chọn của bạn đã được lưu</string>
-	<string name="smallMoveList">Danh sách nước cờ nhỏ hơn cho các ván đấu</string>
+	<string name="smallMoves">Small moves</string>
 </resources>
