--- a/translation/dest/site/ja-JP.xml
+++ b/translation/dest/site/ja-JP.xml
@@ -10,7 +10,7 @@
 	<string name="yourTurn">あなたの手番です</string>
 	<string name="defeatedAiNameAiLevel" comment="Example: Defeated Stockfish level 3">Defeated %1$s level %2$s</string>
 	<string name="level">レベル</string>
-	<string name="levelX" comment="Engine difficulty level">Level %s</string>
+	<string name="levelX" comment="Engine difficulty level">レベル %s</string>
 	<string name="strength">強さ</string>
 	<string name="toggleTheChat">チャットのオン・オフ</string>
 	<string name="toggleSound">音声のオン・オフ</string>
@@ -131,11 +131,11 @@
 	<string name="flipBoard">盤の上下反転</string>
 	<string name="claimADraw">引き分けの申し立て</string>
 	<string name="offerDraw">引き分けの提案</string>
-	<string name="offerAdjournment">Offer adjournment</string>
-	<string name="offerResumption">Offer resumption</string>
-	<string name="acceptResumption">Accept resumption</string>
+	<string name="offerAdjournment">封じ手を申し出る</string>
+	<string name="offerResumption">再開を申し出る</string>
+	<string name="acceptResumption">再開を承諾</string>
 	<string name="draw">引き分け</string>
-	<string name="gameAdjourned">Game was adjourned</string>
+	<string name="gameAdjourned">封じ手されました</string>
 	<string name="gameResumed">Game was resumed</string>
 	<plurals name="nbPlayers">
 		<item quantity="other">%s人接続中</item>
@@ -210,7 +210,7 @@
 	<string name="drawOfferDeclined">引き分けの申し込みは拒否されました</string>
 	<string name="drawOfferAccepted">引き分けの申し込みに合意しました</string>
 	<string name="drawOfferCanceled">引き分けの申し込みをキャンセルしました</string>
-	<string name="adjournmentOfferSent">Adjournment offer sent</string>
+	<string name="adjournmentOfferSent">封じ手の申し出が送信されました</string>
 	<string name="adjournmentOfferCanceled">Adjournment offer cancelled</string>
 	<string name="adjournmentOfferAccepted">Adjournment offer accepted</string>
 	<string name="resumptionOfferSent">Resumption offer sent</string>
@@ -220,7 +220,7 @@
 	<string name="yourOpponentOffersADraw">相手が引き分けを申し込みました</string>
 	<string name="xOffersAdjournment" comment="%s - sente(black)/gote(white)">%s offers adjournment</string>
 	<string name="xDeclinesAdjournment" comment="%s - sente(black)/gote(white)">%s declines adjournment</string>
-	<string name="yourOpponentOffersAnAdjournment">Your opponent offers an adjournment</string>
+	<string name="yourOpponentOffersAnAdjournment">相手が封じ手を申し込みました</string>
 	<string name="xOffersResumption" comment="%s - sente(black)/gote(white)">%s proposes resumption</string>
 	<string name="xDeclinesResumption" comment="%s - sente(black)/gote(white)">%s declines resumption</string>
 	<string name="yourOpponentProposesResumption">Your opponent proposes resumption</string>
@@ -239,7 +239,7 @@
 	<string name="chushogi">中将棋</string>
 	<string name="annanshogi">安南将棋</string>
 	<string name="kyotoshogi">京都将棋</string>
-	<string name="checkshogi">Checkshogi</string>
+	<string name="checkshogi">王手将棋</string>
 	<string name="standardDescription" comment="No need to translate it literally, serves as short description of the variant">Standard rules of shogi</string>
 	<string name="minishogiDescription" comment="No need to translate it literally, serves as short description of the variant">Same rules as standard shogi, but played on a smaller 5x5 board</string>
 	<string name="chushogiDescription" comment="No need to translate it literally, serves as short description of the variant">The most popular historical variant of shogi played on a 12x12 board</string>
