--- a/translation/dest/site/vi-VN.xml
+++ b/translation/dest/site/vi-VN.xml
@@ -10,7 +10,7 @@
 	<string name="yourTurn">Đến lượt bạn</string>
 	<string name="defeatedAiNameAiLevel" comment="Example: Defeated Stockfish level 3">Đã đánh bại %1$s cấp độ %2$s</string>
 	<string name="level">Cấp độ</string>
-	<string name="levelX" comment="Engine difficulty level">Level %s</string>
+	<string name="levelX" comment="Engine difficulty level">Cấp %s</string>
 	<string name="strength">Độ mạnh</string>
 	<string name="toggleTheChat">Bật/Tắt trò chuyện</string>
 	<string name="toggleSound">Bật/Tắt âm thanh</string>
@@ -69,7 +69,7 @@
 	<string name="analysis">Phân tích</string>
 	<string name="analysisDescription">Phân tích các thế cờ Shogi và các biến thể trên bàn cờ Shogi tương tác</string>
 	<string name="depthX">Độ sâu %s</string>
-	<string name="serverAnalysis">Server analysis</string>
+	<string name="serverAnalysis">Phân tích trên máy chủ</string>
 	<string name="usingServerAnalysis">Bạn đang sử dụng máy chủ để phân tích</string>
 	<string name="loadingEngine">Đang tải động cơ máy tính ...</string>
 	<string name="cloudAnalysis">Phân tích đám mây</string>
@@ -131,12 +131,12 @@
 	<string name="flipBoard">Quay bàn cờ</string>
 	<string name="claimADraw">Buộc hòa</string>
 	<string name="offerDraw">Xin hoà</string>
-	<string name="offerAdjournment">Offer adjournment</string>
-	<string name="offerResumption">Offer resumption</string>
-	<string name="acceptResumption">Accept resumption</string>
+	<string name="offerAdjournment">Đề nghị hoãn</string>
+	<string name="offerResumption">Đề nghị tiếp tục</string>
+	<string name="acceptResumption">Chấp nhận tiếp tục</string>
 	<string name="draw">Hoà</string>
-	<string name="gameAdjourned">Game was adjourned</string>
-	<string name="gameResumed">Game was resumed</string>
+	<string name="gameAdjourned">Ván cờ bị hoãn</string>
+	<string name="gameResumed">Ván cờ được tiếp tục</string>
 	<plurals name="nbPlayers">
 		<item quantity="other">%s người chơi</item>
 	</plurals>
@@ -210,22 +210,22 @@
 	<string name="drawOfferDeclined">Từ chối hoà</string>
 	<string name="drawOfferAccepted">Đồng ý hoà</string>
 	<string name="drawOfferCanceled">Yêu cầu hoà bị hủy bỏ</string>
-	<string name="adjournmentOfferSent">Adjournment offer sent</string>
-	<string name="adjournmentOfferCanceled">Adjournment offer cancelled</string>
-	<string name="adjournmentOfferAccepted">Adjournment offer accepted</string>
-	<string name="resumptionOfferSent">Resumption offer sent</string>
-	<string name="resumptionOfferCanceled">Resumption offer cancelled</string>
+	<string name="adjournmentOfferSent">Đề nghị hoãn đã được gửi</string>
+	<string name="adjournmentOfferCanceled">Đề nghị hoãn đã bị hủy bỏ</string>
+	<string name="adjournmentOfferAccepted">Đề nghị hoãn đã được chấp nhận</string>
+	<string name="resumptionOfferSent">Đề nghị tiếp tục đã được gửi</string>
+	<string name="resumptionOfferCanceled">Đề nghị tiếp tục đã bị hủy bỏ</string>
 	<string name="xOffersDraw" comment="%s - sente(black)/gote(white)">%s đề nghị hòa</string>
 	<string name="xDeclinesDraw" comment="%s - sente(black)/gote(white)">%s từ chối hòa</string>
 	<string name="yourOpponentOffersADraw">Đối phương xin hoà</string>
-	<string name="xOffersAdjournment" comment="%s - sente(black)/gote(white)">%s offers adjournment</string>
-	<string name="xDeclinesAdjournment" comment="%s - sente(black)/gote(white)">%s declines adjournment</string>
-	<string name="yourOpponentOffersAnAdjournment">Your opponent offers an adjournment</string>
-	<string name="xOffersResumption" comment="%s - sente(black)/gote(white)">%s proposes resumption</string>
-	<string name="xDeclinesResumption" comment="%s - sente(black)/gote(white)">%s declines resumption</string>
-	<string name="yourOpponentProposesResumption">Your opponent proposes resumption</string>
-	<string name="makeASealedMove">Make a move, that will be played after the game is resumed</string>
-	<string name="waitingForASealedMove">Waiting for the opponent to make a sealed move</string>
+	<string name="xOffersAdjournment" comment="%s - sente(black)/gote(white)">%s đề nghị hoãn</string>
+	<string name="xDeclinesAdjournment" comment="%s - sente(black)/gote(white)">%s từ chối hoãn</string>
+	<string name="yourOpponentOffersAnAdjournment">Đối thủ xin hoãn</string>
+	<string name="xOffersResumption" comment="%s - sente(black)/gote(white)">%s đề nghị tiếp tục</string>
+	<string name="xDeclinesResumption" comment="%s - sente(black)/gote(white)">%s từ chối tiếp tục</string>
+	<string name="yourOpponentProposesResumption">Đối thủ xin tiếp tục</string>
+	<string name="makeASealedMove">Đi một nước sẽ được đi sau khi ván cờ được tiếp tục</string>
+	<string name="waitingForASealedMove">Đang chờ đối thủ đi nước đi phong bàn</string>
 	<string name="accept">Đồng ý</string>
 	<string name="decline">Từ chối</string>
 	<string name="playingRightNow">Ván đấu đang đánh</string>
@@ -296,7 +296,7 @@
 		<item quantity="other">%s đang chơi</item>
 	</plurals>
 	<plurals name="nbAdjourned" comment="Paused games">
-		<item quantity="other">%s adjourned</item>
+		<item quantity="other">%s hoãn</item>
 	</plurals>
 	<string name="exportGames">Xuất biên bản</string>
 	<string name="export">Xuất</string>
@@ -753,7 +753,7 @@ phân tích bằng máy tính, trò chuyện trong ván đấu và có một URL
 	<string name="xCreatesStudyY">%1$s tạo nghiên cứu %2$s</string>
 	<string name="quickPairing">Xếp cặp nhanh</string>
 	<string name="lobby">Phòng chờ</string>
-	<string name="presets" comment="Tab in lobby, try to keep it short">Presets</string>
+	<string name="presets" comment="Tab in lobby, try to keep it short">Có sẵn</string>
 	<string name="anonymous">Ẩn danh</string>
 	<string name="yourScore">Điểm của bạn: %s</string>
 	<string name="language">Ngôn ngữ</string>
