--- a/translation/source/appeal.xml
+++ b/translation/source/appeal.xml
@@ -2,7 +2,7 @@
 <resources>
   <string name="cleanAllGood">Your account is not marked or restricted. You're all good!</string>
   <string name="engineMarked">Your account is marked for external assistance in games.</string>
-  <string name="engineMarkedInfo">We define this as using any external assistance to strengthen your knowledge and, or, calculation ability to gain an unfair advantage over your opponent. We define this as using any external help to reinforce your knowledge and/or calculation skills in order to gain an unfair advantage over your opponent. See the %s page for more details.</string>
+  <string name="engineMarkedInfo">We define this as using any external help to reinforce your knowledge and/or calculation skills in order to gain an unfair advantage over your opponent. See the %s page for more details.</string>
   <string name="arenaBanned">Your account is banned from joining arenas.</string>
   <string name="prizeBanned">Your account is banned from tournaments with real prizes.</string>
   <string name="boosterMarked">Your account is marked for rating manipulation.</string>
