New Crowdin updates (#14836)
* New translations: swiss.xml (Vietnamese)

* New translations: site.xml (Persian)

* New translations: puzzletheme.xml (Persian)

* New translations: site.xml (Greek)

* New translations: arena.xml (Greek)

* New translations: puzzletheme.xml (Persian)

* New translations: faq.xml (Chinese Simplified)

* New translations: emails.xml (Chinese Simplified)

* New translations: team.xml (Finnish)

* New translations: insight.xml (Serbian (Cyrillic))

* New translations: site.xml (Serbian (Cyrillic))

* New translations: class.xml (Serbian (Cyrillic))

* New translations: onboarding.xml (Serbian (Cyrillic))

* New translations: site.xml (Serbian (Cyrillic))

* New translations: site.xml (Chinese Simplified)

* New translations: site.xml (Gujarati)

* New translations: site.xml (Gujarati)

* New translations: site.xml (Czech)

* New translations: ublog.xml (Czech)

* New translations: team.xml (Czech)

* New translations: study.xml (Czech)

* New translations: site.xml (Vietnamese)

* New translations: arena.xml (French)

* New translations: onboarding.xml (Ukrainian)

* New translations: site.xml (Slovak)

* New translations: site.xml (Ukrainian)

* New translations: dgt.xml (Ukrainian)

* New translations: onboarding.xml (Ukrainian)

* New translations: perfstat.xml (Slovak)

* New translations: timeago.xml (Luxembourgish)

* New translations: site.xml (Romanian)

* New translations: site.xml (Frisian)

* New translations: site.xml (Persian)

* New translations: faq.xml (German)

* New translations: arena.xml (Turkish)

* New translations: faq.xml (German)

* New translations: swiss.xml (Portuguese, Brazilian)

* New translations: arena.xml (Catalan)

* New translations: site.xml (Spanish)

* New translations: site.xml (Czech)

* New translations: arena.xml (Spanish)

* New translations: arena.xml (Bulgarian)

* New translations: arena.xml (Danish)

* New 

--- a/translation/dest/faq/de-DE.xml
+++ b/translation/dest/faq/de-DE.xml
@@ -58,12 +58,12 @@ Beachte, dass es mit einem einzelnen Springer oder Läufer möglich ist ein Matt
   <string name="discoveringEnPassant">Warum kann ein Bauer einen anderen Bauern schlagen, wenn er bereits vorbei gezogen ist? (en passant)</string>
   <string name="explainingEnPassant">Dies ist ein regelgemäßer Zug, bekannt als \"en passant\". Der Wikipedia-Artikel gibt einen %1$s.
 
-Dies wird in Abschnitt 3.7 der %2$s beschrieben.
+Abschnitte 3.7.3.1 and 3.7.3.2 des %2$s beschreiben die Regeln:
 
 \"Ein Bauer, der auf derselben Reihe auf einem unmittelbar angrenzenden Feld wie ein gegnerischer Bauer, der soeben zwei Felder von seiner Anfangsstellung vorgerückt ist, steht, darf diesen gegnerischen Bauern so schlagen, als ob letzterer nur um ein Feld vorgerückt wäre. Dieses Schlagen ist nur in dem unmittelbar nachfolgenden Zug regelgemäß und wird \'Schlagen en passant\' genannt.\"
 
 Siehe %3$s für etwas Übung mit dieser Art von Zug.</string>
-  <string name="goodIntroduction">guter ersten Eindruck</string>
+  <string name="goodIntroduction">guten ersten Eindruck</string>
   <string name="lichessTraining">Lichess-Training</string>
   <string name="watchIMRosenCheckmate">Sieh dir an, wie der internationale Meister Eric Rosen %s Matt setzt.</string>
   <string name="threefoldRepetition">Dreifache Stellungswiederholung</string>
